--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Import Poppins, Montserrat, Roboto, and Playfair Display fonts from Google Fonts */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -74,5 +79,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    /* font-family: 'Playfair Display', serif; */
   }
 }
